proofread intro and results

--- a/Report/pages/eidesstattliche.tex
+++ b/Report/pages/eidesstattliche.tex
@@ -9,7 +9,7 @@ Ich erkläre hiermit an Eides statt, dass ich die vorliegende Arbeit
 ohne Hilfe Dritter und ohne Benutzung anderer als der angegebenen
 Hilfsmittel angefertigt habe. Die aus fremden Quellen direkt oder
 indirekt übernommenen Gedanken sind als solche kenntlich gemacht. Die
-Arbeit wurde bisher in gleicher oder ähnlicher Form in keiner anderen
+Arbeit wurde bisher in gleicher oder ähnlicher Form keiner anderen
 Prüfungsbehörde vorgelegt und auch noch nicht veröffentlicht.
 
 
