--- a/Report/pages/introduction.tex
+++ b/Report/pages/introduction.tex
@@ -9,24 +9,22 @@ The release of the Electron Framework in 2013 opened up a way to combine the fle
 
 The thesis will discuss how to write an application using the Electron framework in combination with the Angular front-end framework and the \gls{asp} back-end framework. Its goal is to determine if there are features which do not work at all and what adaptations are needed to get other features working given this specific combination of frameworks. Furthermore, the advantages and disadvantages compared to a pure desktop or web application will be discussed.
 
-\Section{The Jukebox Project}
+\Subsubsection{The Jukebox Project}
 
-The Jukebox project is the proof-of-concept application developed for this thesis. It is a music player. The music files are supposed to be read from disk by the \gls{asp} back-end, and then be transmitted to the Angular web front-end for playback. The \enquote{Player} refers to the code parts which are responsible for handling the playback. Another requirement was that the player can be remote controlled. For this purpose the \gls{asp} server also hosts the application as a pure web page. A second client may use this web page to control the player of the first client. For this feature websockets are used. The application is supposed to have a system tray icon when run as an Electron desktop application. Any noteworthy event should be communicated to the user via notifications.
+The Jukebox project is the proof-of-concept application developed for this thesis. The application is a music player. The music files are read from disk by the \gls{asp} back-end, and then transmitted to the Angular web front-end for playback. The code parts which are responsible for handling the playback are refered to as the \enquote{player}. A requirement was that the player can be remote-controlled. For this purpose, the \gls{asp} server also hosts the application as a pure web page. A second client may use this web page to control the player created by the first client. Websockets are used for this feature. The application should have a system tray icon when run as an Electron desktop application. Any noteworthy event should be communicated to the user via notifications.
 
 \Subsubsection{Architecture Overview}
 
-The entry point for the Jukebox application is in the Electron main.js file. From this file the \gls{asp} server is started as a seperate process using node's \lstcode{child\_process.spawn()} method \cite{nodeSpawn}. Then the \lstcode{BrwoserWindow} is created which will load the index.html file. This is where the Angular framework is initialized. The startup sequence is visualized in \myautoref{fig:startupSequence.png}.
+The entry point for the Jukebox application is in the Electron main.js file. From this file, the \gls{asp} server is started as a separate process using node's \lstcode{child\_process.spawn()} method \cite{nodeSpawn}. Then the \lstcode{BrowserWindow} is created and loads the index.html file. At this point, the Angular framework is initialized. The startup sequence is visualized in \myautoref{fig:startupSequence.png}.
 
 \autoImg{startupSequence.png}{The Jukebox startup sequence.}
 
-Communication between the frameworks is usually initiated from within the Angular code. When communicating with Electron \glspl{api} the \enquote{ngx-electron} package is used (\myref{subsubsec:ngxElectron}). For the communication with the \gls{asp} \gls{http} class and websockets are used.
+Communication between the frameworks is usually initiated from within the Angular code. The \enquote{ngx-electron} package is used for communication with Electron's \glspl{api}  (\myref{subsubsec:ngxElectron}). For the communication with the \gls{asp}, \gls{http} calls and websockets are used.
 
 \Subsubsection{Deployment}
 
-Each of the three frameworks comes with some sort of \gls{cli}, build tools, or required steps for the packaging process. For Electron the Squirrel \cite{squirrel} installer is recommended but during testing many problems were encountered and therefore no real installer is used. Instead Gulp scripts \cite{gulp} are used to create a complete packaged version of the application which then can be shipped with any installer framework or simply copied to the target system. Electron offers pre-built binaries for each operating system which can be downloaded from the Electron site. These binaries and all required \gls{npm} packages are copied to the target packaging location. Then, the \lstcode{electron-rebuild} \gls{npm} package is used to compile all \gls{npm} packages using the target Electron version. After this step is complete, the Angular \gls{cli} is used to build the Angular part of the application. This step is done twice because the first build targets the Electron version and the second build targets the pure web version of the Angular part. The Angular files are then placed in the \lstcode{/resources/app/dist} folder. Then, the \gls{asp} application is published. Publishing a \gls{asp} applicaiton first compiles the source code for a given platform and then copies the binaries including all .NET Core framework libraries to the target folder. For the Jukebox project this folder is located under \lstcode{/resources/app/api/win/} for the windows build. Finally, the \enquote{electron.exe} is renamed into \enquote{Jukebox.exe}.
+Each of the three frameworks comes with some sort of \gls{cli}, build tools, or required steps for the packaging process. For Electron, the Squirrel \cite{squirrel} installer is recommended, but during testing many problems were encountered and therefore, no installer is used. Instead, Gulp scripts \cite{gulp} are used to create a completely packaged version of the application, which then can be shipped with any installer framework or simply copied to the target system. Electron offers pre-built binaries for each operating system, these can be downloaded from the Electron site. Those binaries and all required \gls{npm} packages are copied to the target packaging location. Then, the \lstcode{electron-rebuild} \gls{npm} package is used to compile all \gls{npm} packages to target the current Electron version. After this step has been completed, the Angular \gls{cli} is used to build the Angular part of the application. This step is done twice with varying parameters. The first build targets the Electron version, and the second build targets the pure web version of the Angular part. The Angular files are then placed in the \lstcode{/resources/app/dist} folder. Next, the \gls{asp} application is published. Publishing an \gls{asp} application first compiles the source code for a given platform and then copies the binaries including all .NET Core framework libraries to the target folder. For the Jukebox project, this folder is located under \lstcode{/resources/app/api/win/} for the windows build. Finally, the \enquote{electron.exe} is renamed into \enquote{Jukebox.exe}.
 
-\Section{General stuff???}
+\Subsubsection{General Notes}
 
-developers can be female (duh)
-recognized, separat
-front-end, back-end
+This thesis discusses all three frameworks in a separate chapter each. All descriptions of framework methods are based on the manufacturers documentations. For the sake of simplicity and readability the text uses the male form \enquote{he} instead of \enquote{he or she} when talking about developers, this is deemed to include \enquote{she}.
