--- a/Report/pages/results.tex
+++ b/Report/pages/results.tex
@@ -11,6 +11,6 @@ Compared to a pure web application, the hybrid Electron approach does require mo
 The obvious benefit of this hybrid approach as opposed to a pure web application is its offline usability.  The main advantage, howerever, is the set of numerous and more comprehensive features available. Although some of these features require native node modules, the possibility to implement them at all is well worth the effort involved. Many native node modules are provided through various web portals. For other, more specific use cases, a custom implementation is needed.
 
 
-A reason for using a pure desktop application might be performance problems. This is due to the fact that it is difficult to implement multithreading using the Electron framework. \gls{js} generally runs in one single thread. Libraries like RxJS might give the impression to be multithreaded because of the terminology of awaitables an so forth but this is not the case. They still work with just one thread and use an event loop to simulate multithreading. It is possible to create more then one thread which is usually referred to as a \enquote{Web Worker} but there are no real means to synchronize two threads using locks, semaphores, or monitors \cite{jsWebWorkers}. Electrons documentation also discourages the use of nativ node modules inside a web worker because most of the nativ node modules were not designed to work in a multithreaded environment \cite{electronMultithreading}. Although performance is generally speaking an important point many applicaitons will work well within these limitations. It is also possible to use Electron for most of the application and move only the performance critical code into a native node module or as it was done in the Jukebox project into an \gls{asp} C\# back-end.
+A reason for using a pure desktop application might be to avoid performance problems. This is due to the fact that it is difficult to implement multithreading using the Electron framework. \gls{js} generally runs in one single thread. Libraries like RxJS might give the impression to be multithreaded because they use terminology like awaitables, and so forth, but this is not the case. They still work with just one thread and use an event loop to simulate multithreading. It is possible to create more than one thread which is usually referred to as a \enquote{Web Worker}, but there are no means to synchronize two threads using locks, semaphores, or monitors \cite{jsWebWorkers}. Electron's documentation also discourages the use of native node modules inside a web worker because most of the native node modules were not designed to work in a multithreaded environment \cite{electronMultithreading}. Although performance is generally speaking an important point, many applications will work well within these limitations. It is also possible to use Electron for most of the application and move only the performance-critical code into a native node module, or, as it was done in the Jukebox project, into an \gls{asp} C\# back-end.
 
 The biggest benefit of using Electron is the single code base for all operating systems. Many traditional desktop application frameworks are limited to a single platform and none have the additional benefit of also producing a web page. (many web developers)
