--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -31,7 +31,7 @@
 \newacronym{dll}{DLL}{Dynamically Linked Library}
 \newacronym{exe}{*.exe}{Executable}
 \newacronym{dlls}{DLLs}{Dynamically Linked Libraries}
-\newacronym{api}{API}{Application Program Interface}
+\newacronym{api}{API}{Application Programming Interface}
 \newacronym{tpl}{TPL}{Task Parallel Library}
 \newacronym{tcp}{TCP}{Transmission Control Protocol}
 \newacronym{osi}{OSI}{Open Systems Interconnection}
