--- a/Report/pages/angular.tex
+++ b/Report/pages/angular.tex
@@ -2,11 +2,11 @@
 
 \Chapter{Angular}
 
-Angular is an open-sorce front-end web application framework which is written in \gls{ts}. It is developed by Google and contributers. When talking about Angular it is important to distinguish between AngularJS, also called Angular 1.x, and Angular 2+. For the Jukebox project Angular 2+ was used. In the following text Angular always refers to Angular 2+. \revMark{proofread}
+Angular is an open-source front-end web application framework which is written in \gls{ts}. It is developed by Google and contributors. When talking about Angular it is important to distinguish between AngularJS, also called Angular 1.x, and Angular 2+. For the Jukebox project Angular 2+ was used. In the following text Angular always refers to Angular 2+.
 
 \Section{Structure}
 
-When using the Angular framework a developer will implement his view logic using Components, Modules, Services and many more pre-defined Angular classes. This section describes which elements are offered by the Angular framework and how they should be used. \revMark{proofread}
+When using the Angular framework, a developer will implement his view logic using Components, Modules, Services and many more pre-defined Angular classes. This section describes which elements are offered by the Angular framework and how they should be used.
 
 \Subsubsection[components]{Components}
 
@@ -14,31 +14,31 @@ An Angular component can be compared to a View and ViewModel combination from th
 
 The \lstcode{@Component} decorator can take many arguments, but the commonly used ones are: \enquote{selector}, \enquote{templateUrl}, and \enquote{styleUrls} \cite{ngcomponent}. The selector is a string which starts by convention with \enquote{app} and is then followed by the component's name, see \mylineref{lst:example-component.ts}{comp_selector}. The selector is used to include this component in the \gls{html} of another component.
 
-The \enquote{templateUrl} and \enquote{styleUrls} arguments reference the corresponding \gls{html} and \gls{css} files, respectively (\mylineref{lst:example-component.ts}{comp_templateUrl} and \ref{line:comp_styleUrls}). Both arguments take a relative path, \enquote{templateUrl} is always related to a single file, \enquote{styleUrls} may be related to multiple files in the project. Inline variants may be used for both arguments, though out of readability concerns they should be avoided when possible.
+The \enquote{templateUrl} and \enquote{styleUrls} arguments reference the corresponding \gls{html} and \gls{css} files, respectively (\mylineref{lst:example-component.ts}{comp_templateUrl} and \ref{line:comp_styleUrls}). Both arguments take a relative path, \enquote{templateUrl} is always related to a single file, \enquote{styleUrls} may be related to multiple files in the project. Inline variants may be used for both arguments, though for reasons of readability concerns they should be avoided when possible.
 
 \file{example-component.ts}{Example of an angular component typescript file.}{JavaScript}
 
 \Subsubsection{Lifecycle Hooks}
-The Angular framework manages the lifecycle of each component. Throughout this lifecycle Angular offers the possibility to respond to certain events \zB \lstcode{ngOnDestroy()} where the developer could run a cleanup routine. In order to respond to any of these events the developer has to implement one method per event. The method signatures are defined by the Angular framework and exposed as interfaces. Since the executed code at runtime is \gls{js} code, interfaces are not necessary. Nonetheless it is considered \enquote{best-practice} to use these interfaces.
+The Angular framework manages the lifecycle of each component. Throughout this lifecycle Angular offers the possibility to respond to certain events \zB \lstcode{ngOnDestroy()} where the developer could run a cleanup routine. In order to respond to any of these events, the developer has to implement one method per event. The method signatures are defined by the Angular framework and exposed as interfaces. Since the executed code at runtime is \gls{js} code, interfaces are not necessary. Nonetheless it is considered \enquote{best-practice} to use these interfaces.
 
 \Subsubsection[bindings]{Template Syntax - Bindings}
 A template in the Angular context is equivalent to a \gls{mvvm} View and is written in \gls{html}. All \gls{html} tags are allowed, though some tags like \lstcode{<html>} or \lstcode{<body>} are meaningless in this context. The official set of tags is extended with tags that refer to components as described in \myref{subsubsec:components}.
 
-Like many \gls{mvvm} frameworks, Angular supports bindings. These are used to display data obtained from the ViewModel or, in case of input controls, send data back to the ViewModel. Interpolation is used to display data. The syntax used by Angular is \{\{\lstcode{myObject.myProperty}\}\} as shown in \mylineref{lst:nav-item-component.html}{navItem_interpolation}. Angular will evalute the text between the curly brackets as an expression and then display the result. The context for the expression usually is the component's instance.
+Like many \gls{mvvm} frameworks, Angular supports bindings. These are used to display data obtained from the ViewModel or, in case of input controls, send data back to the ViewModel. Interpolation is used to display data. The syntax used by Angular is \{\{\lstcode{myObject.myProperty}\}\} as shown in \mylineref{lst:nav-item-component.html}{navItem_interpolation}. Angular will evalute the text between the curly brackets as an expression and then display the result. Usually, the context for the expression is the component's instance.
 
 \file{nav-item-component.html}{Example of an angular template.}{HTML5}
 
-In case data from the ViewModel should be passed on to another component, which is referenced via its \gls{html} tag, the square bracket notation is used (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}). It is also possible to use the \lstcode{bind-} prefix \zB \lstcode{bind-CurrentItem="subItem"}. For both of these methods to work, the receiving component needs a property in its ViewModel which is declared with the \lstcode{@Input()} decorator, see \mylineref{lst:example-component.ts}{comp_input}.
+In case data from the ViewModel should be passed on to another component, which is referenced via its \gls{html} tag, the square bracket notation is used (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}). It is also possible to use the \lstcode{bind-} prefix \zB \lstcode{bind-CurrentItem="subItem"}. In order to work, both methods require that the receiving component needs a property in its ViewModel which is declared with the \lstcode{@Input()} decorator, see \mylineref{lst:example-component.ts}{comp_input}.
 
-For events, the standard \gls{js} round bracket notation (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom components can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS Observables are used, \lstcode{Observable<T>} or \lstcode{Subject<T>} are also possible \cite{rxjs}.
+For events, the standard \gls{js} round bracket notation (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom components can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS observables are used, \lstcode{Observable<T>} or \lstcode{Subject<T>} are also possible \cite{rxjs}.
 
-Forms often use elements like a \enquote{Combobox} or \enquote{Dropdown} menu of which the \lstcode{SelectedItem} property is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read but also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achived using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem=\allowbreak "userSelection"}. \cite{angularTemplateSyntax}
+Forms often use elements like a \enquote{Combobox} or a \enquote{Dropdown} menu. The \lstcode{SelectedItem} property of these elements is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read \revMark{komma?} and also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achieved using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem=\allowbreak "userSelection"}. \cite{angularTemplateSyntax}
 
 \Subsubsection{Template Syntax - Directives}
 
 Angular exposes different directives which add certain functionality to the \gls{html}. The \lstcode{*ngIf} directive determines whether the containing tag, as well as its children, should or should not be part of the \gls{dom}. This was used in the Jukebox project for showing \lstcode{NavItems} as an expander for items with children, or regular for single items, as shown in \mylineref{lst:nav-item-component.html}{navItem_ngIf}.
 
-If an item contains children each of these child items has to be displayed. For this the \lstcode{*ngFor} directive is used. Its syntax (\mylineref{lst:nav-item-component.html}{navItem_ngFor}) is similar to the \lstcode{foreach} syntaxes of many popular languages. The index tracking is optional, but useful in some cases. Also, it is possible to use the trackBy feature. This is similar to the \lstcode{equals()} C\# method. It allows the \lstcode{*ngFor} directive to decide on the equality of two items not by their instance references, but a custom-defined method. For this to work, the developer is required to implement a method with the following signature:\\
+If an item contains children each of these child items has to be displayed. For this the \lstcode{*ngFor} directive is used. Its syntax (\mylineref{lst:nav-item-component.html}{navItem_ngFor}) is similar to the \lstcode{foreach} syntaxes of many popular languages. The index tracking is optional, but useful in some cases. Also, it is possible to use the trackBy feature. This is similar to the \lstcode{equals()} C\# method. It allows the \lstcode{*ngFor} directive to decide on the equality of two items not by their instance references, but by a custom-defined method. For this to work, the developer is required to implement a method with the following signature:\\
 \hspace*{1cm} \lstcode{public myTrackBy(index: number, object: object): number}
 
 The third built-in directive is the switch-case directive which lets the developer show content based on a property. \mylineref{lst:nav-item-component.html}{navItem_switch} to \ref{line:navItem_switch_end} is an example of how the \lstcode{NavItem} template could be debugged.
@@ -67,9 +67,9 @@ When talking about modules in an Angular application, it is important to disting
 
 \file{app-module.ts}{The Jukebox AppModule file.}{JavaScript}
 
-NgModules are \gls{ts} classes which are decorated with the \lstcode{NgModule()} annotation (\mylineref{lst:app-module.ts}{module_decorator}). Oftentimes the class is completly empty, since the decorator arguments are the important part of the module, essentially the module's metadata. Each application has to have at least one module, the AppModule.
+NgModules are \gls{ts} classes which are decorated with the \lstcode{NgModule()} annotation (\mylineref{lst:app-module.ts}{module_decorator}). Oftentimes the class is completely empty, since the decorator arguments are the important part of the module, essentially the module's metadata. Each application has to have at least one module, the AppModule.
 
-The \textbf{declarations} argument (\mylineref{lst:app-module.ts}{module_declarations}) is used to specify all components which are part of this module. If a module wants to import other modules, those modules need to be listed using the \textbf{imports} argument (\mylineref{lst:app-module.ts}{module_imports}). If the developer chooses to encapsulate the routing configurations into separate modules, these modules should always be the last ones imported to avoid dependency issues. The \textbf{exports} argument (\mylineref{lst:app-module.ts}{module_exports}) defines which components, services, and/or modules are visible to other modules which import this module. Angular's \gls{di} configuration is strongly tied to its NgModules. The \textbf{providers} argument references all services, pipes, and guards the developer wants to be available for injection. It is also possible to use interception, which has to be defined here as well. To be able to use custom \gls{html} tags (see \myref{subsubsec:components}), the \lstcode{CUSTOM\_ELEMENTS\_SCHEMA} must be included under the \textbf{schemas} argument. The \textbf{bootstrap} argument is rarely used, usually in the AppModule. All components which are added here are marked as entry components for the app start.
+The \textbf{declarations} argument (\mylineref{lst:app-module.ts}{module_declarations}) is used to specify all components which are part of this module. If a module wants to import other modules, those modules need to be listed using the \textbf{imports} argument (\mylineref{lst:app-module.ts}{module_imports}). If the developer chooses to encapsulate the routing configurations into separate modules, these modules should always be the last ones imported to avoid dependency issues. The \textbf{exports} argument (\mylineref{lst:app-module.ts}{module_exports}) defines which components, services, and/or modules are visible to other modules which import this module. Angular's \gls{di} configuration is strongly tied to its NgModules. The \textbf{providers} argument references all services, pipes, and guards the developer wants to be available for injection. It is also possible to use interception, which has to be defined here as well. To be able to use custom \gls{html} tags (see \myref{subsubsec:components}), the \lstcode{CUSTOM\_ELEMENTS\_SCHEMA} must be included under the \textbf{schemas} argument. Usually, the \textbf{bootstrap} argument is only used in the AppModule. All components which are added here are marked as entry components for the app start. \revMark{proofread}
 
 \Subsubsection[routing]{Routing}
 
@@ -79,23 +79,23 @@ Every Angular application is a \gls{spa}, which means that the client downloads 
 
 Routing is done through the \lstcode{<router-outlet />} tag in \gls{html} and the \lstcode{RouterModule}. The \lstcode{<router-outlet />} tag tells Angular that the developer wants to display different \enquote{subsites} at this location in the \gls{dom}. Usually an application has some kind of menu or navigation bar which is always visible and then the rest of content is displayed through the router outlet, as shown in \mylineref{lst:navigation-bar.html}{navbar_router}.
 
-Angular's routing module also changes the URL in the browser's address bar. This allows for deep links into the site, but also requires any web server which serves this \gls{spa} to return the same \gls{html} for all URLs whithout a redirect to the index.html route, or otherwise it would break Angular's routing.
+Angular's routing module also changes the URL in the browser's address bar. This allows for deep links into the site, but also requires any web server which serves this \gls{spa} to return the same \gls{html} for all URLs without a redirect to the index.html route, otherwise it would break Angular's routing.
 
 \file{security-routing-module.ts}{The Jukebox security route definitions.}{JavaScript}
 
 To define the application routes and map their components, the \lstcode{RouterModule\allowbreak .forRoot} or \lstcode{RouterModule.forChild} methods are used (\mylineref{lst:security-routing-module.ts}{routing_forChild}). The \lstcode{RouterModule.forRoot} method may only be called once and is usually located in the app-routing.module.ts file. Following the Angular code style guidelines, every module should have its own routing module. This is possible through the \lstcode{RouterModule.forChild} method which may be called as often as needed.
 
-The \textbf{path} argument must be set for each route. In case of a simple route, which maps to a \textbf{component}, the component in question must be specified (\mylineref{lst:security-routing-module.ts}{routing_simpleComponent}). A route can also be used as an organizing element for the application's URLs and so may not have a component but multiple routes (\mylineref{lst:security-routing-module.ts}{routing_children}). This is usually done once per module and allows the developer create well-structured URLs. There are many more arguments which define details such as path matching strategies or specific router-outlets.
+The \textbf{path} argument must be set for each route. In case of a simple route, which maps to a \textbf{component}, the component in question must be specified (\mylineref{lst:security-routing-module.ts}{routing_simpleComponent}). A route can also be used as an organizing element for the application's URLs and so may not have a component, but multiple routes (\mylineref{lst:security-routing-module.ts}{routing_children}). This is usually done once per module and allows the developer to create well-structured URLs. There are many more arguments which define details such as path matching strategies or specific router-outlets.
 
-One very important feature of the Angular routing system is that of guards. A guard is a method which is called by the \lstcode{RouterModule} if a certain condition is met. They are specified in the route configuration, as shown in \mylineref{lst:security-routing-module.ts}{routing_guard}. The conditions are \lstcode{canActivate}, \lstcode{canActivateChildren}, \lstcode{canDeactive}, \lstcode{canDeactivateChildren}, and \lstcode{canLoad}. Guards are always invoked after a navigation is queried, but before it is completed. The return value is of type \lstcode{Observable<boolean>}, \lstcode{Promise<boolean>}, or \lstcode{boolean} and determines whether the navigation may proceed. In the example of the \lstcode{AuthGuard} (\mylineref{lst:security-routing-module.ts}{routing_guard}), the \lstcode{AuthenticationService.isLoggedIn()} method is used to determine whether the user was logged in and can therefore now be logged out.
+One very important feature of the Angular routing system is that of guards. A guard is a method which is called by the \lstcode{RouterModule} if a certain condition is met. Guards are specified in the route configuration, as shown in \mylineref{lst:security-routing-module.ts}{routing_guard}. The conditions are \lstcode{canActivate}, \lstcode{canActivateChildren}, \lstcode{canDeactive}, \lstcode{canDeactivateChildren}, and \lstcode{canLoad}. Guards are always invoked after a navigation is queried, but before it is completed. The return value is of type \lstcode{Observable<boolean>}, \lstcode{Promise<boolean>}, or \lstcode{boolean} and determines whether the navigation may proceed. In the example of the \lstcode{AuthGuard} (\mylineref{lst:security-routing-module.ts}{routing_guard}), the \lstcode{AuthenticationService.isLoggedIn()} method is used to determine whether the user was logged in and can therefore now be logged out.
 
 Angular also allows the use of asynchronous routing, also called lazy loading. This is useful if certain parts of the application are rarely used, or only used by a small number of users. In this case, the application is separated into several chunks and only the needed code parts are served during the initial loading of the application. Once the user accesses a route to a module which is not yet loaded, Angular will trigger the download of the missing module and display it as soon as the download has finished. This will improve initial loading times, but some routes may be slow, as they have to be loaded on demand. It is also possible to configure the \lstcode{RoutingModule} in a certain way which prioritizes the important parts of the application. In this case, the initial download might contain the index page as well as commonly-used modules. Once they are loaded and displayed, the \lstcode{RouterModule} will download the remaining modules in the background. This will improve initial loading times without the drawback of bottlenecks later on. It should be noted that even if a module is configured to load asynchronously, it will be loaded with the initial chunk in case it is referenced in some other component. This is due to the fact that the other component depends on this module.
 
 \Subsubsection{Dependency Injection and Interception}
 
-The Angular framework relies heavily on \gls{di} and, as of version 4.3 \cite{interceptorAngularVersion} also offers Interception. As described in \myref{subsubsec:ngmodules}, the configuration of Angular's \gls{di} capabilities is achieved through the metadata of NgModules. Every component and provider listed in the module can be requested. Additionally, it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so, the configuration will override any configuration done at the NgModule level. To make the injection work, Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though, if required by a certain action, it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope, which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the component tree structure (see \myautoref{fig:componentHierarchy.png}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
+The Angular framework relies heavily on \gls{di} and, as of version 4.3 \cite{interceptorAngularVersion} also offers interception. As described in \myref{subsubsec:ngmodules}, the configuration of Angular's \gls{di} capabilities is achieved through the metadata of NgModules. Every component and provider listed in the module can be requested. Additionally, it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so, the configuration will override any configuration \revMark{specified} at the NgModule level. To make the injection work, Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though, if required by a certain action, it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope, which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the component tree structure (see \myautoref{fig:componentHierarchy.png}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
 
-\autoImg{componentHierarchy.png}{The Angular component hierarchy. \cite{componentHierarchy}}
+\autoImg{componentHierarchy.png}{Component hierarchy in the Angualr framework. \cite{componentHierarchy}}
 
 As of version 4.3 Angular offers the possibility of interception. Angular's interception is limited to only the \lstcode{HttpClient} class, contrary to other \gls{di} frameworks where any class can be intercepted. To specify one or multiple interceptors, the developer has to configure a provider as shown in \mylineref{lst:app-module.ts}{module_interceptor}.
 
@@ -109,11 +109,11 @@ The interceptor is a class which implements the \lstcode{HttpInterceptor} interf
 Angular Material is a framework, also developed by Google, which provides pre-built controls. These include buttons, trees, datepickers and many more. All of these controls are styled with the Google Material style guidelines in mind. To be able to use this framework, the developer has to install it via \gls{npm} or a similar package management tool. \cite{angularMaterial}
 
 \Subsubsection{Components}
-Each control is an Angular component. This means that controls can be used in the \gls{html} by inculding the corresponding tag, as shown in \mylineref{lst:navigation-bar.html}{navbar_mat_toolbar}. Any \gls{html} tag which starts with the \lstcode{mat-} prefix references an Angular Material control/component.
+Each control is an Angular component. This means that controls can be used in the \gls{html} by including the corresponding tag, as shown in \mylineref{lst:navigation-bar.html}{navbar_mat_toolbar}. Any \gls{html} tag which starts with the \lstcode{mat-} prefix references an Angular Material control/component.
 
 This prefix was changed from \lstcode{md-} to the current \lstcode{mat-}. At the same time, Angular Material changed how the components are organized into modules. Previously, there was a single module called \lstcode{MaterialModule} which became deprecated and was replaced by dedicated modules for each single control, \zB \lstcode{MatButtonModule}. The Jukebox project currently uses 17 different controls, which results in having to import 17 different modules. To keep the app.moudle.ts file tidy, a custom module was created. This so-called \lstcode{Material\-MetaModule} imports and exports all 17 \enquote{submodules}, so that the \lstcode{AppModule} only has to import this one meta module.
 
-Many controls like buttons or the toolbar are only referenced in the \gls{html} because they don't contain much logic. These components are desinged to communicate through their events and properties. This can be achieved through bindings in the \gls{html} code (see \myref{subsubsec:bindings}). Especially for dialogs, a developer wants to have more control over how and when the dialog is displayed. Dialogs are also invoked through the \gls{ts}, for instance inside some method or event handler. Typically, the dialog contains some sort of question and the answer determines how the application should proceed. Since a dialog is a modal element which is always positioned as an overlay, it is unclear where the element should be placed in the \gls{dom}. Angular Material solves this by injecting the \lstcode{MatDialog} into the component's \gls{ts} file (\mylineref{lst:dialog.ts}{dialog_injected}). This means that the placement in the \gls{dom} is done by the framework and the developer doesn't have to worry about it.
+Many controls like buttons or the toolbar are only referenced in the \gls{html} because they don't contain much logic. These components are designed to communicate through their events and properties. This can be achieved through bindings in the \gls{html} code (see \myref{subsubsec:bindings}). Especially for dialogs, a developer wants to have more control over how and when the dialog is displayed. Dialogs are also invoked through the \gls{ts}, for instance inside some method or event handler. Typically, the dialog contains some sort of question and the answer determines how the application should proceed. Since a dialog is a modal element which is always positioned as an overlay, it is unclear where the element should be placed in the \gls{dom}. Angular Material solves this by injecting the \lstcode{MatDialog} into the component's \gls{ts} file (\mylineref{lst:dialog.ts}{dialog_injected}). This means that the placement in the \gls{dom} is done by the framework and the developer doesn't have to worry about it.
 
 A filepicker dialog was implemented for the Jukebox project. This dialog serves the purpose of selecting a folder which the server should use to index *.mp3 files. Once the user clicks the \enquote{addPath} button, a dialog is created. This is done via the \lstcode{MatDialog.open()} method, as shown in \mylineref{lst:dialog.ts}{dialog_open}. The \lstcode{MatDialog.open()} method requires the type of an Angular component as its first argument. This determines the component to be displayed as the dialog's content. In addition, a configuration object may be passed to the method. The configuration object is of type \lstcode{MatDialogConfig} and is used to configure the dialog's appearance. One of its properties is the \lstcode{data} property which allows the developer to pass an arbitrary object into the dialog. This feature was used to pass a custom configuration object of type \lstcode{FilePickerConfig} (\mylineref{lst:dialog.ts}{dialog_filePickerConfig}).
 
@@ -130,9 +130,9 @@ Once the \lstcode{MatDialog.open()} method is called, the required component wil
 
 Using intuitive icons is a big part of the visual design of any application. There are many ways how icons can be encoded and used, \zB they can be images or vector graphics. Angular Material uses another, also popular method called \enquote{Font Icons}. The same concept is used by FontAwesome \cite{fontAwesome} and many others. A font usually displays some sort of letter but technically it is just a way of representing a scalable image. Icons are mostly used in buttons or menus which are all designed to work with some sort of font. Also, fonts are an old concept which means support for them is fairly good.
 
-There are many ways to use the Material icon set. The Jukebox project mainly uses the \lstcode{<mat-icon />} tag (see \mylineref{lst:navigation-bar.html}{navbar_icon}), but it is also possible to associate \gls{css} classes with specific icons or use the \lstcode{<svg />} tag. It should be noted though, that the latter two examples are usually needed if the provided icons aren't sufficient or if \zB another icon font is used in addition. To use the Material icon set its font must be included. This was done via the \lstcode{@font-face} \gls{css} rule.
+There are many ways to use the Material icon set. The Jukebox project mainly uses the \lstcode{<mat-icon />} tag (see \mylineref{lst:navigation-bar.html}{navbar_icon}), but it is also possible to associate \gls{css} classes with specific icons or use the \lstcode{<svg />} tag. It should be noted though, that the latter two examples are usually needed if the provided icons aren't sufficient or if \zB another icon font is used in addition. \revMark{The font of the Material icon set had to be included via \lstcode{@font-face} \gls{css} rule in oder to use the icon set.}
 
-During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the unicode explicitly. This method has the drawback, that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding unicodes. Since the focus for this thesis was towards compatibility between Electron and Angular, none of these tools were evaluated. \cite{materialIcons}
+During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the unicode explicitly. This method has the drawback that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding unicodes. \revMark{Since this thesis is focused on compatibility between Electron and Angular, none of these tools were evaluated.} \cite{materialIcons}
 
 
 \Section{Websockets}
