--- a/Report/pages/electron.tex
+++ b/Report/pages/electron.tex
@@ -10,13 +10,13 @@ Electron enables a developer to build cross-platform applications which are writ
 
 Every Electron application has a main file which is the root or starting point for the application. This file is specified in the package.json configuration file with the key \enquote{main}. By convention, this file is called \enquote{main.js}, but any name is possible.
 
-This main file is mostly used to set event handlers on the app object. These include handlers for the \enquote{ready}, \enquote{window-all-closed}, and \enquote{activate} events (see \myautoref{lst:main-ready.js}). Also the event handler for the ready event usually contains code to create a \lstcode{BrowserWindow} object and load some \gls{html}. In the Jukebox project, the main.js file is used for the entire application startup sequence as well as for some Electron debugging methods.
+This main file is mostly used to set event handlers on the app object. These include handlers for the \enquote{ready}, \enquote{window-all-closed}, and \enquote{activate} events (see \myautoref{lst:main-ready.js}). Also, the event handler for the ready event usually contains code to create a \lstcode{BrowserWindow} object and load some \gls{html}. In the Jukebox project, the main.js file is used for the entire application startup sequence as well as for some Electron debugging methods.
 
 \file{main-ready.js}{The Jukebox app \enquote{ready} event handler.}{JavaScript}
 
 Electron uses the multi-process architecture of its underlying Chromium V8 engine. This means that the main.js file is called from the main process but every \enquote{web page} is running in a separate window and process, which is called a renderer process \cite{electronAppArch}. \myautoref{fig:electronArch.png} illustrates the multi-process architecture.
 
-\image[scale=.2]{electronArch.png}{Electron architectural overview. \cite{electronArch}}
+\image[scale=.2]{electronArch.png}{Overview on the architecture of Electron. \cite{electronArch}}
 
 There is exactly one main process at all times. It is responsible for managing all of the renderer processes. A renderer process only knows its web page and is isolated from the rest of the application. It is thightly coupled to the \lstcode{BrowserWindow} object. If the window is destroyed, the process is also terminated.
 
@@ -28,13 +28,13 @@ As all renderer processes are isolated from the main process as well as each oth
 
 The \lstcode{ipcMain} is only accessible in the main process. It is used to handle asynchronous as well as synchronous messages sent from a renderer process (\myautoref{lst:ipcMain.js}). To handle messages the \lstcode{ipcMain.on()} method is used. Its first argument is a string which is referred to as \enquote{channel} and used as a key. The same channel has to be used for the sender and the receiver. The second argument is a delegate which takes an event object as well as many arguments. This delegate will be executed every time a renderer process sends a message using the specified channel.
 
-The \lstcode{ipcMain} object also provides several other methods, \zB a method to execute a listener only once, another method to remove a single or all listeners. As shown in \myautoref{lst:ipcMain.js} the main process can reply via the \lstcode{event.returnValue} property which results in a synchronous message. It could also send a new message to the renderer which would be an example of an asynchronous communication. The \lstcode{ipcMain} object does not contain a send method like the \lstcode{ipcRenderer}, since it would not be clear where to send the message. Instead, the \lstcode{webContents} object of a given \lstcode{BrowserWindow} provides this method. This is the same object held by the \lstcode{event.sender} property. \cite{ipcMain}
+The \lstcode{ipcMain} object also provides several other methods, \zB a method to execute a listener only once, another method to remove a single or all listeners. As shown in \myautoref{lst:ipcMain.js}, the main process can reply via the \lstcode{event.returnValue} property which results in a synchronous message. It could also send a new message to the renderer which would be an example of an asynchronous communication. The \lstcode{ipcMain} object does not contain a send method like the \lstcode{ipcRenderer}, since it would not be clear where to send the message. Instead, the \lstcode{webContents} object of a given \lstcode{BrowserWindow} provides this method. This is the same object held by the \lstcode{event.sender} property. \cite{ipcMain}
 
 The \lstcode{ipcRenderer} object is only available inside a renderer process and is similar to the \lstcode{ipcMain} object. The only notable differences are the \lstcode{send} methods. It is possible to send asynchronous as well as synchronous messages. The \lstcode{ipcRenderer.send()} method always sends the message to the main process. If the message needs to be sent to a different renderer process, the \lstcode{ipcRenderer.sendTo()} method may be used. \cite{ipcRenderer}
 
 \gls{ipc} was used in the Jukebox project to quit the application from the taskbar item. This was neccessary since the \lstcode{app} object is only available within the main process, but the system tray is set up inside an Angular service class which runs in a renderer process. Also, \gls{ipc} may be used if results of a dialog have to be communicated back to the main application.
 
-\Subsubsection{App}
+\Subsubsection{The App Object}
 
 Electron's \lstcode{app} object provides access to the application's lifecycle events, as well as properties which hold information about the application. This includes methods to manipulate the Windows jumplist in order to add items to the taskbar context menu. It is possible to import certificates, get application metrics, access the OSX dock, or get the application's root folder path. In the Jukebox project, this was used for the notifications and system tray functionalities and will be described in more detail in the corresponding sections.
 
@@ -42,9 +42,9 @@ Electron's \lstcode{app} object provides access to the application's lifecycle e
 
 Node.js is a \gls{js} runtime environment which offers libraries for a variety of typical desktop application tasks. The Jukebox project uses mostly the \enquote{fs} and \enquote{os} libraries.
 
-The \enquote{fs} library grants access to the filesystem \cite{nodejsFS}. It was used to check that the Windows start menu folder for this application exists and if not, create it (\mylineref{lst:setupWindowsNotifications.js}{swn_fs}). Without the \gls{asp} server this library would  be used to access the music files.
+The \enquote{fs} library grants access to the filesystem \cite{nodejsFS}. \revMark{It is used to check that} the Windows start menu folder for this application exists and if not, create it (\mylineref{lst:setupWindowsNotifications.js}{swn_fs}). Without the \gls{asp} server this library would  be used to access the music files.
 
-The \enquote{os} library provides access to operating system specific information and methods \cite{nodejsOS}. This was used to determine the current operating system and architecture to be able to register the correct notification libraries.
+The \enquote{os} library provides access to operating system specific information and methods \cite{nodejsOS}. It is used to determine the current operating system and architecture to be able to register the correct notification libraries.
 
 \Section[accessElectronApis]{Accessing Electron APIs from within Angular}
 
@@ -58,11 +58,11 @@ The first approach was to try and \lstcode{import} or \lstcode{require()} the El
 
 The alternative to \lstcode{require('electron')} is to use the ngx-electron package \cite{ngxElectron}. This package provides an Angular service, the \lstcode{ElectronService}, which is exposed as an interface and contains properties for all of the Electron \gls{api}s.
 
-This package checks the user agent property to determine whether the application is running inside Electron. If it is, the Electron package is \lstcode{required()}. If not, all properties of the \lstcode{ElectronService} return \lstcode{undefined}, except for the \lstcode{isElectronApp} property. This property returns a \lstcode{boolean} and makes it simple to check whether the application is running inside Electron or as a web page in some browser.
+This package checks the user agent property to determine whether the application is running inside Electron. If it is, the Electron package is \lstcode{required()}. If not, all properties of the \lstcode{ElectronService} return \lstcode{undefined}, except for the \lstcode{isElectronApp} property. This property returns a \lstcode{boolean} and makes it easy to check whether the application is running inside Electron or as a web page in some browser.
 
 \Section[electronMenus]{Menus}
 
-A big difference between web pages and traditional desktop applications is the placement of menues. Web applications often integrate menues into the web page, sometimes as navigation bars, sometimes at prominent locations in the layout. For desktop applications the placement of the menu is rather clear. For Windows applications it is a menu bar right under the top border of your application window and for Ubuntu (Unity) and OSX it is also a menu bar, but located at the top of your screen.
+A big difference between web pages and traditional desktop applications is the placement of menus. Web applications often integrate menus into the web page, sometimes as navigation bars, sometimes at prominent locations in the layout. For desktop applications the placement of the menu is rather clear. For Windows applications it is a menu bar right under the top border the application window and for Ubuntu (Unity) and OSX it is also a menu bar, but located at the top of your screen.
 
 \Subsubsection{Application Menu}
 
@@ -77,37 +77,37 @@ For the Jukebox project, a custom \lstcode{MenuItem} class was created: the \lst
 
 \Subsubsection{System Tray}
 
-Another style of a menu is the system tray and its contextmenu. Especially for applications which are supposed to run in the background and only show a notification when an event occurs, the ability to minimize the application to the system tray is very important. Electron supports this feature with the \lstcode{Electron.remote.Tray} \gls{api}.
+Another style of a menu is the system tray and its context menu. Especially for applications which are supposed to run in the background and only show a notification when an event occurs, the ability to minimize the application to the system tray is very important. Electron supports this feature with the \lstcode{Electron.remote.Tray} \gls{api}.
 
 The \lstcode{Electron.remote.Tray} object takes a \lstcode{Electron.remote.NativeImage} or a \lstcode{string} as constructor arguments. Both variants were tried, but the \lstcode{string} variant did not show the icon, even though the system tray was there and clickable. Once the system tray object is created, a menu may be set.
 
 \file{browserWindowClose.js}{The modified \lstcode{BrowserWindow.close()} event.}{JavaScript}
 
-In the Jukebox project, the system tray was used to minimize the application without quitting it when all windows were closed. To quit the application, a \enquote{Quit} menu item was added to the system tray. For this purpose, the \lstcode{BrowserWindow.close()} event had to be modified, as shown in \myautoref{lst:browserWindowClose.js}. The \enquote{Quit} menu item's \lstcode{click()} handler then uses \gls{ipc} to tell the main process to quit the application via a call to \lstcode{app.quit()}.
+In the Jukebox project, the system tray is used to minimize the application without quitting it when all windows are closed. To quit the application, a \enquote{Quit} menu item was added to the system tray. For this purpose, the \lstcode{BrowserWindow.close()} event had to be modified, as shown in \myautoref{lst:browserWindowClose.js}. The \enquote{Quit} menu item's \lstcode{click()} handler then uses \gls{ipc} to tell the main process to quit the application via a call to \lstcode{app.quit()}.
 
 \file{trayMenuTemplate.ts}{Example of a menu template.}{JavaScript}
 
-In the Jukebox project, the system tray menu was implemented using templates, as shown in \myautoref{lst:trayMenuTemplate.ts}. This means an array of anonymous objects is created which all follow a certain signature. The properties of these objects are then read by the Electron framework and an \lstcode{Electron.MenuItem} is created using this blueprint. The advantages are that the developer only has to specify the properties needed for this menu item and the framework can ignore additional properties. Therefore, it is possible to use existing custom objects in this array, without the need for implementing interfaces.
+In the Jukebox project, the system tray menu is implemented using templates, as shown in \myautoref{lst:trayMenuTemplate.ts}. This means an array of anonymous objects is created which all follow a certain signature. The properties of these objects are then read by the Electron framework and an \lstcode{Electron.MenuItem} is created using this blueprint. The advantages are that the developer only has to specify the properties needed for this menu item and the framework can ignore additional properties. Therefore, it is possible to use existing custom objects in this array, without the need for implementing interfaces.
 
 \Subsubsection{Challenges while Implementing Menus}
 
 One of the challenges encountered was routing from a menu item's \lstcode{click()} handler. Many menu items are used to navigate through the application \zB to get to the settings page. In Angular, routing is usually done via the \lstcode{Router.navigateByUrl()} method. If the \lstcode{click()} handler of a menu item was set to just this line of code, navigation would occur, but the old page was still displayed and the new page was added underneath.
 
-Angular uses zone.js to enable its \lstcode{<router-outlet />} feature of exchanging parts of the web page at runtime and manage different execution contexts \cite{zoneJS}. Since the \lstcode{click()} event handler is called from the Electron framework, it is called from a different context, which causes this faulty behavior.
+Angular uses zone.js to enable its \lstcode{<router-outlet />} feature to exchange parts of the web page at runtime and manage different execution contexts \cite{zoneJS}. Since the \lstcode{click()} event handler is called from the Electron framework, it is called from a different context, which causes this faulty behavior.
 
 To fix this situation, a reference to the \lstcode{NgZone} object is needed, which can be obtained through injection. The \lstcode{click()} handler then has to be modified to run the navigation code in the corresponding zone, as shown in \myautoref{lst:zoneNavigation.ts}.
 
 \file{zoneNavigation.ts}{Fixed \lstcode{click()} handler.}{JavaScript}
 
-Another issue is that of top level menu items not behaving correctly. This is a knwon and ongoing issue of the Electron framework. It results in top level items ignoring the change of values of the \lstcode{enabled} and \lstcode{visibile} properties. Currently, there is no fix for this bug. \cite{topMenuItems}
+Another issue is that of top level menu items not behaving correctly. This is a known and ongoing issue of the Electron framework. It results in top level items ignoring the change of values of the \lstcode{enabled} and \lstcode{visibile} properties. Currently, there is no fix for this bug. \cite{topMenuItems}
 
 \Section{Notifications}
 
-Electron provides a basic \gls{api} for all operating systems to send notifications to the user. For this the \gls{html} 5 notification \gls{api} is used.
+Electron uses the \gls{html} 5 notification \gls{api} to send basic notifications to the user. This \gls{api} works on all operating systems. \revMark{proofread}
 
-The globally available \lstcode{Notification} object is used to manage the permission to display notifications for each web page. This is done through the static \lstcode{Notification.permission} property which returns one of the three following values: \enquote{granted}, \enquote{denied}, or \enquote{default}. The \enquote{default} value tells the developer that the user's choice is unknown at this moment. In this state, the browser behaves as if the user denied permission, which results in showing no notifications at all. Using the static \lstcode{Notification.requestPermission()} method, the user is asked whether he wants to see notifications or not.
+The globally available \lstcode{Notification} object \revMark{is used to manage (it doesnt do it by itself)} the permission to display notifications for each web page. This is done through the static \lstcode{Notification.permission} property which returns one of the three following values: \enquote{granted}, \enquote{denied}, or \enquote{default}. The \enquote{default} value tells the developer that the user's choice is unknown at this moment. In this state, the browser behaves as if the user denied permission, which results in showing no notifications at all. Using the static \lstcode{Notification.requestPermission()} method, the user is asked whether he wants to see notifications or not.
 
-Once permission is granted, a notification can be displayed, as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object, but these are not implemented in all browsers and therefore should not be relied on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api}, but is needed for the Windows operating system, if omitted Windows will not show any notification at all \revMark{proofread}. The property can be used in non-Windows environments without risk because the constructor uses templates and the property will simply be ignored, if not needed. \cite{mdnNotification}
+Once permission is granted, a notification can be displayed, as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object, but these are not implemented in all browsers and therefore should not be relied on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api}, but is needed for the Windows operating system. If the property is omitted Windows will not show any notification at all \revMark{proofread}. The property can be used in non-Windows environments without risk because the constructor uses templates and the property will simply be ignored \revMark{komma?} when it is not needed. \cite{mdnNotification}
 
 \file{html-notification.ts}{Displaying a basic HTML notification.}{JavaScript}
 
@@ -118,9 +118,9 @@ Under Windows, the \enquote{electron-windows-notifications} \cite{winNot} and \e
 
 The \enquote{electron-windows-notifications} package offers two kinds of notifications. The first type is called \lstcode{TileNotification}. This notification updates the primary or secondary tiles of the application. In this case the application must be run inside the \gls{uwp} model. The second type is called \lstcode{ToastNotification}. This is the \enquote{standard} notification which is usually displayed on the bottom right corner of the screen and can later on be found in the Windows Action Center.
 
-A prerequisite for showing any kind of notification is that the application has set up an \lstcode{appId}. Configuring this \lstcode{appId} is a multi-step procedure. First, a start menu folder has to be created for the application. Then, a shortcut to the application has to be placed in this folder. During testing, it was discovered that it does not matter where this shortcut points to in order to show the notification. If, however, the shortcut points to the wrong file, the click action on the notification might not work as expected. Next, the \enquote{System.AppUserModel.ID} data store property of the shortcut must be set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry so it shows the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. During the startup sequence of the application the \lstcode{app.setAppUserModelId()} method has to be called. Finally, every notification object, be it the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification} must have the \lstcode{appId} property set. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique. A \gls{guid} was used for the Jukebox project.
+A prerequisite for showing any kind of notification is that the application has set up an \lstcode{appId}. Configuring this \lstcode{appId} is a multi-step procedure. First, a start menu folder has to be created for the application. Then, a shortcut to the application has to be placed in this folder. During testing, it was discovered that it does not matter where this shortcut points to in order to show the notification. If, however, the shortcut points to the wrong file, the click action on the notification might not work as expected. Next, the \enquote{System.AppUserModel.ID} data store property of the shortcut must be set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry so it shows the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. During the startup sequence of the application, the \lstcode{app.setAppUserModelId()} method has to be called. \revMark{Finally}, the \lstcode{appId} property must be set for every notification object, be it the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification}. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique. A \gls{guid} was used for the Jukebox project.
 
-The notification package uses the \enquote{nodert-win10-au} native Node module to call native Windows \gls{api}s. The \lstcode{ToastNotification} and \lstcode{TileNotification} objects are used similarly to their corresponding C++ classes. Most notably, the notifications are constructed using an \gls{xml} template. This template allows for banner images, cropped images, and many more visual elements to be placed in the notification.
+The notification package uses the \enquote{nodert-win10-au} native Node module to call native Windows \gls{api}s. The \lstcode{ToastNotification} and \lstcode{TileNotification} objects are used similarly to their corresponding C++ classes. Most notably, the notifications are constructed using an \gls{xml} template. \revMark{This template allows the placement of banner images, cropped images, and many more visual elements in the notification.}
 
 Although many features of the Windows 10 notification \gls{api} work, not all do and some only do in certain circumstances. The \gls{wdc} page, \zB lists a progress bar feature which does not work at all. Also, there are many ways to display images \zB as app logo override, as hero image, or as inline image. Microsoft offers three different protocols to reference an image: \enquote{http://}, \enquote{ms-appx:///}, and \enquote{ms-appdata:///}. The \enquote{http://} protocol did not show an image, while the \enquote{ms-appx:///} and \enquote{ms-appdata:///} worked, but only if the application was run inside a \gls{uwp} model. \cite{toastContent}
 
@@ -128,11 +128,11 @@ Although many features of the Windows 10 notification \gls{api} work, not all do
 
 Windows notifications also support buttons, comboboxes, and inline replies. These interactive elements are not supported by default and the additional \enquote{electron-windows-interactive-notifications} package is needed.
 
-This package works by registering a \gls{com} server. Whenever a user interacts with a notification, the \gls{com} server is called with the information on the action chosen by the user any related data. The \gls{com} server then encodes this data into a string and calls the application via a protocol link.
+This package works by registering a \gls{com} server. Whenever a user interacts with a notification, the \gls{com} server is called with the information on the action chosen by the user \revMark{and} any related data. The \gls{com} server then encodes this data into a string and calls the application via a protocol link.
 
 At installation time the package requires two parameters. The first parameter to be set is called \enquote{TOAST\_ACTIVATOR\_CLSID}. This needs to be a unique string and it is strongly recommended to use a \gls{guid}. According to the package's documentation, this can be achieved through setting the CLSID in the package.json configuration file or setting the \enquote{TOAST\_ACTIVATOR\_CLSID} environment variable. Tests showed that the package.json method does not work \cite{clsidPackageJson}. Second, the application protocol has to be set. This is possible via package.json and environment variables and here, the package.json does not work either. Both of these values have to be set at installation time, since a \gls{dll} will be compiled during the installation of the package. In the \gls{dll} these two values are saved as constants.
 
-During the startup sequence of the Electron app, both the \gls{com} server the \enquote{TOAST\_ACTIVATOR\_CLSID} have to be registered. This can be achieved with the \lstcode{registerActivator()} and \lstcode{registerAppForNotificationSupport()} methods, respectively, as shown in \myautoref{lst:setupWindowsNotifications.js}. To register the application as default protocol handler, the \lstcode{app.setAsDefaultProtocol\-Client()} method may be used. This method requires the protocol name as well as a path to the executable as arguments.
+During the startup sequence of the Electron app, both the \gls{com} server and the \enquote{TOAST\_ACTIVATOR\_CLSID} have to be registered. This can be achieved with the \lstcode{registerActivator()} and \lstcode{registerAppForNotificationSupport()} methods, respectively, as shown in \myautoref{lst:setupWindowsNotifications.js}. To register the application as default protocol handler, the \lstcode{app.setAsDefaultProtocol\-Client()} method may be used. This method requires the protocol name as well as a path to the executable as arguments.
 
 \file{setupWindowsNotifications.js}{Registration of the electron-windows-interactive-notifications package.}{JavaScript}
 
@@ -147,9 +147,7 @@ Electron makes this possible with the \lstcode{app.makeSingleInstance()} method.
 
 For macOS the \enquote{node-mac-notifier} package may be used. This package allows the developer to specify the \lstcode{canReplay} property which is of type \lstcode{boolean}. When set to true the user will be presented with a text input field which may be used for a reply. Apart from this reply feature the \enquote{node-mac-notifier} package offers no other features.
 
-As of Electron v2 the documentation states that more functionallity of the \gls{html}5 \gls{api} is implemented, but only for macOS. Now the \lstcode{actions} property on the \lstcode{Notification} object may be used. An action may have a label and must be a button. When more then one action is specified for a notification, only the first on is shown. To see all available actions the user will have to hover the first action. If the \lstcode{hasReply} property is set to true no actions will be shown. Furthermore, the app needs to be signed and have its \lstcode{NSUserNotificationAlertStyle} set to \lstcode{alert} in the \lstcode{Info.plist}. This was not tested due to the very reasent update of the Electron framework.
-
-\revMark{proofread}
+As of Electron v2 the documentation states that more functionality of the \gls{html}5 \gls{api} is implemented, but only for macOS. Now the \lstcode{actions} property on the \lstcode{Notification} object may be used. An action may have a label and must be a button. When more than one action is specified for a notification, only the first one is shown. To see all available actions the user will have to hover the mouse over the first action. If the \lstcode{hasReply} property is set to true no actions will be shown. Furthermore, the app needs to be signed and have its \lstcode{NSUserNotificationAlertStyle} set to \lstcode{alert} in the \lstcode{Info.plist}. This could not be tested due to the very recent update of the Electron framework.
 
 \Subsubsection{Linux}
 
