--- a/Report/pages/introduction.tex
+++ b/Report/pages/introduction.tex
@@ -1,9 +1,9 @@
 % !TEX root=../report.tex
 \Chapter{Introduction}
 
-When developing a new application, certain aspects are to be considered. One of the main decicions is whether the application is going to be a web or a desktop application. Many applications, like the entire Microsoft Office Suite, which used to be pure desktop applications now either have web counterparts or have been moved to the web environment completely. The web environment gives the developer access to all desktop as well as mobile platforms. Frameworks for those types of applications include Angular, jQuery, React, Vue, Ember, or Meteor for the frontend as well as \gls{asp}, Django, Express, or Ruby on Rails for the backend.
+When developing a new application, certain aspects are to be considered. A fundamental decision to be made is whether the application is going to be a web or a desktop application. Many applications, like the entire Microsoft Office Suite, which used to be pure desktop applications now either have web counterparts or have been moved to the web environment completely. The web environment gives the developer access to all desktop platforms as well as mobile platforms. Frameworks for those types of applications include Angular, jQuery, React, Vue, Ember, or Meteor for the front-end as well as \gls{asp}, Django, Express, or Ruby on Rails for the back-end.
 
-Although web applications are still gaining popularity, desktop applications have not yet ceased to exist. This may be due to the fact that web applications are subject to many restrictions. Many tasks like editing files, communicating with special hardware or querying databases are not possible. Yet these basic tasks are essential for many applications. Another reason why users might prefer desktop applications, is the fact that they can be used offline and that a desktop application is what most people are used to.
+Although web applications are becoming more and more popular, desktop applications have not yet ceased to exist. This may be due to the fact that web applications are subject to many restrictions. Many tasks like editing files, communicating with special hardware or querying databases are not possible. Yet these basic tasks are essential for many applications. Other reasons why users might prefer desktop applications, is the fact that they can be used offline and that a desktop application is what most people are used to.
 
 The release of the Electron Framework in 2013 opened up a way to combine the flexibility of web applications with the strength of desktop applications. Electron makes it possible to write one single code base consisting of \gls{html}, \gls{css} and \gls{js}, and still access native \glspl{api}, files and databases. Electron also offers \glspl{api} for notifications or a system tray icon, which are commonly used elements in desktop applications.
 
@@ -11,13 +11,13 @@ The thesis will discuss how to write an application using the Electron framework
 
 \Subsubsection{The Jukebox Project}
 
-The Jukebox project is the proof-of-concept application developed for this thesis. The application is a music player. The music files are read from disk by the \gls{asp} back-end, and then transmitted to the Angular web front-end for playback. The code parts which are responsible for handling the playback are refered to as the \enquote{player}. A requirement was that the player can be remote-controlled. For this purpose, the \gls{asp} server also hosts the application as a pure web page. A second client may use this web page to control the player created by the first client. Websockets are used for this feature. The application should have a system tray icon when run as an Electron desktop application. Any noteworthy event should be communicated to the user via notifications.
+The Jukebox project is the proof-of-concept application developed for this thesis. The application is a music player. The music files are read from disk by the \gls{asp} back-end, and then transmitted to the Angular web front-end for playback. The code parts which are responsible for handling the playback are referred to as the \enquote{player}. A requirement was that the player can be remote-controlled. For this purpose, the \gls{asp} server also hosts the application as a pure web page. A second client may use this web page to control the player created by the first client. Websockets are used for this feature. The application should have a system tray icon when run as an Electron desktop application. Any noteworthy event should be communicated to the user via notifications.
 
 \Subsubsection{Architecture Overview}
 
 The entry point for the Jukebox application is in the Electron main.js file. From this file, the \gls{asp} server is started as a separate process using node's \lstcode{child\_process.spawn()} method \cite{nodeSpawn}. Then the \lstcode{BrowserWindow} is created and loads the index.html file. At this point, the Angular framework is initialized. The startup sequence is visualized in \myautoref{fig:startupSequence.png}.
 
-\autoImg{startupSequence.png}{The Jukebox startup sequence.}
+\autoImg{startupSequence.png}{Startup sequence of the Jukebox application.}
 
 Communication between the frameworks is usually initiated from within the Angular code. The \enquote{ngx-electron} package is used for communication with Electron's \glspl{api}  (\myref{subsubsec:ngxElectron}). For the communication with the \gls{asp}, \gls{http} calls and websockets are used.
 
