--- a/Report/pages/angular.tex
+++ b/Report/pages/angular.tex
@@ -32,7 +32,7 @@ In case data from the ViewModel should be passed on to another component, which 
 
 For events, the standard \gls{js} round bracket notation (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom components can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS observables are used, \lstcode{Observable<T>} or \lstcode{Subject<T>} are also possible \cite{rxjs}.
 
-Forms often use elements like a \enquote{Combobox} or a \enquote{Dropdown} menu. The \lstcode{SelectedItem} property of these elements is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read \revMark{komma?} and also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achieved using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem=\allowbreak "userSelection"}. \cite{angularTemplateSyntax}
+Forms often use elements like a \enquote{Combobox} or a \enquote{Dropdown} menu. The \lstcode{SelectedItem} property of these elements is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read and also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achieved using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem=\allowbreak "userSelection"}. \cite{angularTemplateSyntax}
 
 \Subsubsection{Template Syntax - Directives}
 
@@ -69,7 +69,7 @@ When talking about modules in an Angular application, it is important to disting
 
 NgModules are \gls{ts} classes which are decorated with the \lstcode{NgModule()} annotation (\mylineref{lst:app-module.ts}{module_decorator}). Oftentimes the class is completely empty, since the decorator arguments are the important part of the module, essentially the module's metadata. Each application has to have at least one module, the AppModule.
 
-The \textbf{declarations} argument (\mylineref{lst:app-module.ts}{module_declarations}) is used to specify all components which are part of this module. If a module wants to import other modules, those modules need to be listed using the \textbf{imports} argument (\mylineref{lst:app-module.ts}{module_imports}). If the developer chooses to encapsulate the routing configurations into separate modules, these modules should always be the last ones imported to avoid dependency issues. The \textbf{exports} argument (\mylineref{lst:app-module.ts}{module_exports}) defines which components, services, and/or modules are visible to other modules which import this module. Angular's \gls{di} configuration is strongly tied to its NgModules. The \textbf{providers} argument references all services, pipes, and guards the developer wants to be available for injection. It is also possible to use interception, which has to be defined here as well. To be able to use custom \gls{html} tags (see \myref{subsubsec:components}), the \lstcode{CUSTOM\_ELEMENTS\_SCHEMA} must be included under the \textbf{schemas} argument. Usually, the \textbf{bootstrap} argument is only used in the AppModule. All components which are added here are marked as entry components for the app start. \revMark{proofread}
+The \textbf{declarations} argument (\mylineref{lst:app-module.ts}{module_declarations}) is used to specify all components which are part of this module. If a module wants to import other modules, those modules need to be listed using the \textbf{imports} argument (\mylineref{lst:app-module.ts}{module_imports}). If the developer chooses to encapsulate the routing configurations into separate modules, these modules should always be the last ones imported to avoid dependency issues. The \textbf{exports} argument (\mylineref{lst:app-module.ts}{module_exports}) defines which components, services, and/or modules are visible to other modules which import this module. Angular's \gls{di} configuration is strongly tied to its NgModules. The \textbf{providers} argument references all services, pipes, and guards the developer wants to be available for injection. It is also possible to use interception, which has to be defined here as well. To be able to use custom \gls{html} tags (see \myref{subsubsec:components}), the \lstcode{CUSTOM\_ELEMENTS\_SCHEMA} must be included under the \textbf{schemas} argument. The final argument is the \textbf{bootstrap} argument. Usually, it is only used in the AppModule. All components which are added here are marked as entry components for the app start.
 
 \Subsubsection[routing]{Routing}
 
@@ -93,7 +93,7 @@ Angular also allows the use of asynchronous routing, also called lazy loading. T
 
 \Subsubsection{Dependency Injection and Interception}
 
-The Angular framework relies heavily on \gls{di} and, as of version 4.3 \cite{interceptorAngularVersion} also offers interception. As described in \myref{subsubsec:ngmodules}, the configuration of Angular's \gls{di} capabilities is achieved through the metadata of NgModules. Every component and provider listed in the module can be requested. Additionally, it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so, the configuration will override any configuration \revMark{specified} at the NgModule level. To make the injection work, Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though, if required by a certain action, it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope, which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the component tree structure (see \myautoref{fig:componentHierarchy.png}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
+The Angular framework relies heavily on \gls{di} and, as of version 4.3 \cite{interceptorAngularVersion} also offers interception. As described in \myref{subsubsec:ngmodules}, the configuration of Angular's \gls{di} capabilities is achieved through the metadata of NgModules. Every component and provider listed in the module can be requested. Additionally, it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so, the configuration will override any configuration specified at the NgModule level. To make the injection work, Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though, if required by a certain action, it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope, which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the component tree structure (see \myautoref{fig:componentHierarchy.png}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
 
 \autoImg{componentHierarchy.png}{Component hierarchy in the Angualr framework. \cite{componentHierarchy}}
 
@@ -130,9 +130,9 @@ Once the \lstcode{MatDialog.open()} method is called, the required component wil
 
 Using intuitive icons is a big part of the visual design of any application. There are many ways how icons can be encoded and used, \zB they can be images or vector graphics. Angular Material uses another, also popular method called \enquote{Font Icons}. The same concept is used by FontAwesome \cite{fontAwesome} and many others. A font usually displays some sort of letter but technically it is just a way of representing a scalable image. Icons are mostly used in buttons or menus which are all designed to work with some sort of font. Also, fonts are an old concept which means support for them is fairly good.
 
-There are many ways to use the Material icon set. The Jukebox project mainly uses the \lstcode{<mat-icon />} tag (see \mylineref{lst:navigation-bar.html}{navbar_icon}), but it is also possible to associate \gls{css} classes with specific icons or use the \lstcode{<svg />} tag. It should be noted though, that the latter two examples are usually needed if the provided icons aren't sufficient or if \zB another icon font is used in addition. \revMark{The font of the Material icon set had to be included via \lstcode{@font-face} \gls{css} rule in oder to use the icon set.}
+There are many ways to use the Material icon set. The Jukebox project mainly uses the \lstcode{<mat-icon />} tag (see \mylineref{lst:navigation-bar.html}{navbar_icon}), but it is also possible to associate \gls{css} classes with specific icons or use the \lstcode{<svg />} tag. It should be noted, though, that the latter two examples are usually needed if the provided icons aren't sufficient or if \zB another icon font is used in addition. The font of the Material icon set has to be included via \lstcode{@font-face} \gls{css} rule in order to use the icon set.
 
-During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the unicode explicitly. This method has the drawback that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding unicodes. \revMark{Since this thesis is focused on compatibility between Electron and Angular, none of these tools were evaluated.} \cite{materialIcons}
+During the development of the Jukebox project, a bug was discovered which resulted in no icons being displayed. This only occurred in the Internet Explorer and Edge and was fixed by changing how icons are selected. Angular Material offers the possibility to use an icon's name to reference it inside the \gls{html} tag \zB \lstcode{<mat-icon>menu</mat-icon>}. Another method is to use the unicode explicitly. This method has the drawback that it isn't obvious anymore what an icon represents or looks like by just looking at the \gls{html} code. Some users in the community have created command line tools, which integrate into the Angular \gls{cli} or work as standalone scripts, which replace all names with the corresponding unicodes. Since this thesis is focused on compatibility between Electron and Angular, none of these tools were evaluated. \cite{materialIcons}
 
 
 \Section{Websockets}
@@ -140,6 +140,5 @@ During the development of the Jukebox project, a bug was discovered which result
 The \gls{http} protocol was designed for web pages and is based on client-initiated communication. There are techniques like long polling which simulate a two-way communication channel but even there, the client needs to initialize the communication. This becomes a problem in web applications which rely on events or push notifications rather than on polling. In the Jukebox project, one requirement was that a music player could be remote-controlled. Websockets were used to push events like \enquote{Next} or \enquote{Play/Pause} to the player.
 
 Websockets can be used by calling the \lstcode{WebSocket.send()} and \lstcode{WebSocket.close()} methods as well as listening to the various events. Another approach is to wrap the WebSocket into a RxJS \lstcode{Subject}, as shown in \myautoref{lst:websocket.ts} \cite{rxjs} \cite{js_websockets}. To do so, the developer creates an \lstcode{Observable} which binds to the events of the \lstcode{WebSocket} object (lines \ref{line:websocket_observable_start} to \ref{line:websocket_observable_stop}). Then an \lstcode{Observer} is created (line \ref{line:websocket_observer}). In this example, the \lstcode{Observer} is an object which has a \lstcode{next()} method that is empty. This is due to the fact that in the Jukebox project notifications are only received through the websocket. This \lstcode{next()} method is normally used to call the \lstcode{WebSocket.send()} method to send data back to the server. A RxJS \lstcode{Subject} is created from the \lstcode{Observer} and \lstcode{Observable} objects. This \lstcode{Subject} can then be subscribed to in order to receive incoming messages. To send messages the \lstcode{Subject.next()} method may be used.
-\revMark{send was used for the player control - clarify that}
 
 \file{websocket.ts}{Sample websocket usage.}{JavaScript}
