--- a/Report/pages/electron.tex
+++ b/Report/pages/electron.tex
@@ -42,7 +42,7 @@ Electron's \lstcode{app} object provides access to the application's lifecycle e
 
 Node.js is a \gls{js} runtime environment which offers libraries for a variety of typical desktop application tasks. The Jukebox project uses mostly the \enquote{fs} and \enquote{os} libraries.
 
-The \enquote{fs} library grants access to the filesystem \cite{nodejsFS}. \revMark{It is used to check that} the Windows start menu folder for this application exists and if not, create it (\mylineref{lst:setupWindowsNotifications.js}{swn_fs}). Without the \gls{asp} server this library would  be used to access the music files.
+The \enquote{fs} library grants access to the filesystem \cite{nodejsFS}. It is used to check whether the Windows start menu folder for this application exists, and otherwise create it (\mylineref{lst:setupWindowsNotifications.js}{swn_fs}). Without the \gls{asp} server this library would  be used to access the music files.
 
 The \enquote{os} library provides access to operating system specific information and methods \cite{nodejsOS}. It is used to determine the current operating system and architecture to be able to register the correct notification libraries.
 
@@ -103,11 +103,11 @@ Another issue is that of top level menu items not behaving correctly. This is a 
 
 \Section{Notifications}
 
-Electron uses the \gls{html} 5 notification \gls{api} to send basic notifications to the user. This \gls{api} works on all operating systems. \revMark{proofread}
+Electron uses the \gls{html} 5 notification \gls{api} to send basic notifications to the user. This \gls{api} works on all operating systems.
 
-The globally available \lstcode{Notification} object \revMark{is used to manage (it doesnt do it by itself)} the permission to display notifications for each web page. This is done through the static \lstcode{Notification.permission} property which returns one of the three following values: \enquote{granted}, \enquote{denied}, or \enquote{default}. The \enquote{default} value tells the developer that the user's choice is unknown at this moment. In this state, the browser behaves as if the user denied permission, which results in showing no notifications at all. Using the static \lstcode{Notification.requestPermission()} method, the user is asked whether he wants to see notifications or not.
+The globally available \lstcode{Notification} object is used to manage the permission to display notifications for each web page. This is done through the static \lstcode{Notification.permission} property which returns one of the three following values: \enquote{granted}, \enquote{denied}, or \enquote{default}. The \enquote{default} value tells the developer that the user's choice is unknown at this moment. In this state, the browser behaves as if the user denied permission, which results in showing no notifications at all. Using the static \lstcode{Notification.requestPermission()} method, the user is asked whether he wants to see notifications or not.
 
-Once permission is granted, a notification can be displayed, as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object, but these are not implemented in all browsers and therefore should not be relied on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api}, but is needed for the Windows operating system. If the property is omitted Windows will not show any notification at all \revMark{proofread}. The property can be used in non-Windows environments without risk because the constructor uses templates and the property will simply be ignored \revMark{komma?} when it is not needed. \cite{mdnNotification}
+Once permission is granted, a notification can be displayed, as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object, but these are not implemented in all browsers and therefore should not be relied on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api}, but is needed for the Windows operating system. If the property is omitted, Windows will not show any notification at all. The property can be used in non-Windows environments without risk because the constructor uses templates. The property will simply be ignored when it is not needed. \cite{mdnNotification}
 
 \file{html-notification.ts}{Displaying a basic HTML notification.}{JavaScript}
 
@@ -118,9 +118,9 @@ Under Windows, the \enquote{electron-windows-notifications} \cite{winNot} and \e
 
 The \enquote{electron-windows-notifications} package offers two kinds of notifications. The first type is called \lstcode{TileNotification}. This notification updates the primary or secondary tiles of the application. In this case the application must be run inside the \gls{uwp} model. The second type is called \lstcode{ToastNotification}. This is the \enquote{standard} notification which is usually displayed on the bottom right corner of the screen and can later on be found in the Windows Action Center.
 
-A prerequisite for showing any kind of notification is that the application has set up an \lstcode{appId}. Configuring this \lstcode{appId} is a multi-step procedure. First, a start menu folder has to be created for the application. Then, a shortcut to the application has to be placed in this folder. During testing, it was discovered that it does not matter where this shortcut points to in order to show the notification. If, however, the shortcut points to the wrong file, the click action on the notification might not work as expected. Next, the \enquote{System.AppUserModel.ID} data store property of the shortcut must be set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry so it shows the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. During the startup sequence of the application, the \lstcode{app.setAppUserModelId()} method has to be called. \revMark{Finally}, the \lstcode{appId} property must be set for every notification object, be it the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification}. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique. A \gls{guid} was used for the Jukebox project.
+A prerequisite for showing any kind of notification is that the application has set up an \lstcode{appId}. Configuring this \lstcode{appId} is a multi-step procedure. First, a start menu folder has to be created for the application. Then, a shortcut to the application has to be placed in this folder. During testing, it was discovered that it does not matter where this shortcut points to in order to show the notification. If, however, the shortcut points to the wrong file, the click action on the notification might not work as expected. Next, the \enquote{System.AppUserModel.ID} data store property of the shortcut must be set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry so it shows the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. During the startup sequence of the application, the \lstcode{app.setAppUserModelId()} method has to be called. Finally, the \lstcode{appId} property must be set for every notification object, be it the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification}. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique. A \gls{guid} was used for the Jukebox project.
 
-The notification package uses the \enquote{nodert-win10-au} native Node module to call native Windows \gls{api}s. The \lstcode{ToastNotification} and \lstcode{TileNotification} objects are used similarly to their corresponding C++ classes. Most notably, the notifications are constructed using an \gls{xml} template. \revMark{This template allows the placement of banner images, cropped images, and many more visual elements in the notification.}
+The notification package uses the \enquote{nodert-win10-au} native Node module to call native Windows \gls{api}s. The \lstcode{ToastNotification} and \lstcode{TileNotification} objects are used similarly to their corresponding C++ classes. Most notably, the notifications are constructed using an \gls{xml} template. This template allows the placement of banner images, cropped images, and many more visual elements in the notification.
 
 Although many features of the Windows 10 notification \gls{api} work, not all do and some only do in certain circumstances. The \gls{wdc} page, \zB lists a progress bar feature which does not work at all. Also, there are many ways to display images \zB as app logo override, as hero image, or as inline image. Microsoft offers three different protocols to reference an image: \enquote{http://}, \enquote{ms-appx:///}, and \enquote{ms-appdata:///}. The \enquote{http://} protocol did not show an image, while the \enquote{ms-appx:///} and \enquote{ms-appdata:///} worked, but only if the application was run inside a \gls{uwp} model. \cite{toastContent}
 
@@ -128,7 +128,7 @@ Although many features of the Windows 10 notification \gls{api} work, not all do
 
 Windows notifications also support buttons, comboboxes, and inline replies. These interactive elements are not supported by default and the additional \enquote{electron-windows-interactive-notifications} package is needed.
 
-This package works by registering a \gls{com} server. Whenever a user interacts with a notification, the \gls{com} server is called with the information on the action chosen by the user \revMark{and} any related data. The \gls{com} server then encodes this data into a string and calls the application via a protocol link.
+This package works by registering a \gls{com} server. Whenever a user interacts with a notification, the \gls{com} server is called with the information on the action chosen by the user and any related data. The \gls{com} server then encodes this data into a string and calls the application via a protocol link.
 
 At installation time the package requires two parameters. The first parameter to be set is called \enquote{TOAST\_ACTIVATOR\_CLSID}. This needs to be a unique string and it is strongly recommended to use a \gls{guid}. According to the package's documentation, this can be achieved through setting the CLSID in the package.json configuration file or setting the \enquote{TOAST\_ACTIVATOR\_CLSID} environment variable. Tests showed that the package.json method does not work \cite{clsidPackageJson}. Second, the application protocol has to be set. This is possible via package.json and environment variables and here, the package.json does not work either. Both of these values have to be set at installation time, since a \gls{dll} will be compiled during the installation of the package. In the \gls{dll} these two values are saved as constants.
 
