--- a/Report/pages/acknowlagement.tex
+++ b/Report/pages/acknowlagement.tex
@@ -1,6 +1,6 @@
 % !TEX root=../report.tex
 
-\chapter*{Acknowlagements}
-\markboth{Acknowlagements}{Acknowlagements}
+\chapter*{Acknowledgements}
+\markboth{Acknowledgements}{Acknowledgements}
 
-First of all I would like to thank my supervisor Dr. Mathias Teßmann and the faculty staff for their support during the writing of this thesis. I am grateful to my mother Andrea, who has provided me with moral support and accurate comments which were of critical importance, during this work. I am also grateful to my other family members and friends who have supported me along the way.
+First of all I would like to thank my supervisor, Dr. Matthias Teßmann, and Klaus Raithel for their support in technical and editorial matters during the writing of this thesis. I am grateful to my mother, Andrea Schultheiß, who has provided me with moral support and helpful comments. I would also like to thank the rest of my family and friends including my cat who have cheered me up along the way.
